--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+  <link rel="icon" href="%PUBLIC_URL%/r_logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -11,26 +11,22 @@
   <title>Steven Odhiambo | Portfolio</title>
   <meta name="description" content="Self Developed personal website build with React.js">
 
-  <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="Steven | Portfolio">
-  <meta itemprop="description" content="Self Developed personal website build with React.js">
-  <meta itemprop="image"
-    content="https://raw.githubusercontent.com/Sephens/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
-
-  <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://portfolio-lake-five-68.vercel.app/">
+  <!-- Meta tags for Google -->
+  <meta name="description" content="Portfolio Built with React.js and Bootsrap">
+  <meta name="keywords" content="Steven Ombam Portfolio">
+  
+  <!-- Meta tags for Facebook -->
+  <meta property="og:title" content="Steven Ombam | Portfolio">
+  <meta property="og:description" content="My Portfolio Built with React.js and Bootsrap">
+  <meta property="og:image" content="URL of the image you want to display when sharing on Facebook">
+  <meta property="og:url" content="URL of your website">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Steven | Portfolio">
-  <meta property="og:description" content="Self Developed personal website build with React.js">
-  <meta property="og:image"
-    content="https://raw.githubusercontent.com/Sephens/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
-
-  <!-- Twitter Meta Tags -->
+  
+  <!-- Meta tags for Twitter -->
+  <meta name="twitter:title" content="Your App Title">
+  <meta name="twitter:description" content="Description of your website for Twitter">
+  <meta name="twitter:image" content="URL of the image you want to display when sharing on Twitter">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Steven | Portfolio">
-  <meta name="twitter:description" content="Self Developed personal website build with React.js">
-  <meta name="twitter:image"
-    content="https://raw.githubusercontent.com/Sephens/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
 </head>
 
 <body>
